definitions/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
  labels:
    app: employee  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
      - image: sureshgkhyd/employee
        imagePullPolicy: Never
        name: employee
        resources:
          limits:
            cpu: "250m"
            memory: "128Mi"
        
---

apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    app: employee
  ports:
  - port: 8080
    targetPort: 8080
